book/tests/snapshots/snapshot__run_display_reference_prql@language-features__dates-and-times-0.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/language-features/dates-and-times-0.prql
---
from employees
derive age_at_year_end = @2022-12-31 - dob



