book/tests/snapshots/snapshot__run_display_reference_prql@language-features__dates-and-times-1.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/language-features/dates-and-times-1.prql
---
from orders
derive should_have_shipped_today = order_time < @08:30



