book/tests/snapshots/snapshot__run_display_reference_prql@language-features__s-strings-2.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/language-features/s-strings-2.prql
---
from de = dept_emp
join side:left s = salaries [
  s.emp_no == de.emp_no,
  s"({s.from_date}, {s.to_date})
  OVERLAPS
  ({de.from_date}, {de.to_date})",
]



