book/tests/snapshots/snapshot__run_display_reference_prql@language-features__s-strings-4.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/language-features/s-strings-4.prql
---
from employees
derive [has_valid_title = s"regexp_contains(title, '([a-z0-9]*-){2,}')"]



