book/tests/snapshots/snapshot__run_display_reference_prql@language-features__standard-library-0.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/language-features/standard-library-0.prql
---
from employees
derive [
  gross_salary = (
  salary + payroll_tax
  as int
),
  gross_salary_rounded = (
  gross_salary
  round 0
),
  time = s"NOW()",
]



